<resources>
    <string name="app_name">StarGo</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="t_n_s_n_ph_m">Tên Sản Phẩm</string>
    <string name="gi_s_n_ph_m">Giá sản phẩm</string>
    <string name="m_t_i_n_tho_i">Mô Tả Điện Thoại</string>
    <string name="m_t_laptop">Mô Tả LapTop</string>
    <string name="t_n_chi_ti_t_s_n_ph_m">Tên Chi Tiết Sản Phẩm</string>
    <string name="gi_chi_ti_t_s_n_ph_m">Giá Chi Tiết Sản Phẩm</string>
    <string name="th_m_gi_h_ng">Thêm Giỏ Hàng</string>
    <string name="m_t_chi_ti_t_s_n_ph_m">Mô Tả Chi Tiết Sản Phẩm</string>
    <string name="todo6">TODO</string>
    <string name="gi_h_ng_c_a_b_n_ang_tr_ng">Giỏ Hàng Của Bạn Đang Trống</string>
    <string name="t_ng_ti_n">Tổng Tiền:</string>
    <string name="gi_tr">Giá Trị</string>
    <string name="todo7">TODO</string>
    <string name="_1">1</string>
    <string name="mi">-</string>
    <string name="pl">+</string>
    <string name="t_n_m_n_h_ng">Tên Món hàng</string>
    <string name="gi_m_n_h_ng">Giá Món hàng</string>
    <string name="thanh_to_n_gi_h_ng">Thanh Toán Giỏ Hàng</string>
    <string name="ti_p_t_c_mua_h_ng">Tiếp Tục Mua Hàng</string>
    <string name="gi_h_ng">Giỏ Hàng</string>
    <string name="th_ng_tin_kh_ch_h_ng">Thông Tin Khách Hàng</string>
    <string name="nh_p_t_n_kh_ch_h_ng">Nhập Tên Khách Hàng</string>
    <string name="nh_p_a_ch_kh_ch_h_ng">Nhập Địa Chỉ Khách Hàng</string>
    <string name="nh_p_s_i_n_tho_i_kh_ch_h_ng">Nhập Số Điện Thoại Khách Hàng</string>
    <string name="tr_v">Trở Về</string>
    <string name="x_c_nh_n">Xác Nhận</string>
    <string name="th_ng_tin_li_n_h">Thông Tin Liên Hệ</string>
    <string name="h_v_t_n_mai_anh_h_a">Họ Và Tên: Mai Anh Hòa</string>
    <string name="email_mahoa_19it1_vku_udn_vn">Email: mahoa.19it1@vku.udn.vn</string>
    <string name="i_n_tho_i_0706097692">Điện Thoại: 0706097692</string>
    <string name="title_activity_thong_tin">Map</string>
    <string name="adress">Địa Chỉ: 16 Lê Thiện Trị , Hòa Hải, Ngũ Hành Sơn, TP.Đà Nẵng</string>
    <string name="todo8">TODO</string>
    <string name="th_ng_tin_v_ch_ng_t_i">Thông Tin Về Chúng tôi</string>
    <string name="nh_p_t_kh_a">Nhập từ khóa</string>
    <string name="todo9">TODO</string>
    <string name="ng_nh_p">Đăng Nhập</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="nh_p_t_n_t_i_kho_n">Nhập Tên Tài Khoản</string>
    <string name="ng_nh_ptxt">ĐĂNG NHẬP</string>
    <string name="ng_k_">Đăng ký nếu bạn chưa có tài khoản</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="ng_k">Đăng ký</string>
    <string name="ng_ky">ĐĂNG KÝ</string>
    <string name="b_n_c_ch_c_l_m_nh_s_ng_xu_t_ch">Bạn Có Chắc là mình sẽ đăng xuất chứ</string>
    <string name="ng_xu_t">đăng xuất</string>
    <string name="todo10">TODO</string>
</resources>