<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">
    <LinearLayout
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <ImageView
            android:adjustViewBounds="true"
            android:layout_margin="5dp"
            android:id="@+id/imagegiohang"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/todo7" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_weight="7"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/t_n_m_n_h_ng"
            android:textColor="#10100f"
            android:id="@+id/textviewtengiohang"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="3dp"
            android:text="@string/gi_m_n_h_ng"
            android:textColor="#f20"
            android:id="@+id/textviewgiagiohang"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:focusable="false"
                    android:text="@string/mi"
                    android:id="@+id/buttonminus"
                    android:layout_marginTop="5dp"
                    android:textSize="30sp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"/>
                <Button
                    android:background="@null"
                    android:focusable="false"
                    android:text="@string/_1"
                    android:id="@+id/buttonvalues"
                    android:layout_marginTop="5dp"
                    android:textSize="30sp"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:focusable="false"
                    android:text="@string/pl"
                    android:id="@+id/buttonplus"
                    android:layout_marginTop="5dp"
                    android:textSize="30sp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
    </LinearLayout>

</LinearLayout>