<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2f4079"
    tools:context=".Activity.ThongTinKhachHang">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/boder"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="30sp"
            android:text="@string/th_ng_tin_kh_ch_h_ng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/edittexttenKH"
                android:inputType="text"
                android:hint="@string/nh_p_t_n_kh_ch_h_ng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/edittextdiachiKH"
                android:inputType="text"
                android:hint="@string/nh_p_a_ch_kh_ch_h_ng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/edittextsdtKH"
                android:inputType="phone"
                android:hint="@string/nh_p_s_i_n_tho_i_kh_ch_h_ng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginEnd="70dp"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttonxacnhan"
                android:text="@string/x_c_nh_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttontrove"
                android:text="@string/tr_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>