<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activity.ChiTietSanPham">
  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toobarCTSP"
      android:background="#5500FF"
      app:title="Chi Tiết Sản Phẩm"
      app:titleTextColor="#fffdfd"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize" >

  </androidx.appcompat.widget.Toolbar>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <ImageView
          android:id="@+id/imageCTSP"
          android:src="@mipmap/ic_launcher"
          android:layout_margin="10dp"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:contentDescription="@string/todo6" />
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
              android:text="@string/t_n_chi_ti_t_s_n_ph_m"
              android:textStyle="bold"
              android:textColor="#000000"
              android:layout_margin="10dp"
              android:id="@+id/textviewtenCTSP"
              android:textSize="20sp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/gi_chi_ti_t_s_n_ph_m"
            android:textStyle="bold"
            android:textColor="#f20"
            android:layout_margin="10dp"
            android:id="@+id/textviewgiaCTSP"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:padding="10dp"
            android:background="@drawable/spinner"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>
        <Button
            android:id="@+id/buttondatmua"
            android:textSize="15sp"
            android:text="@string/th_m_gi_h_ng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

      </LinearLayout>
  </LinearLayout>
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <TextView
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#0A237C"
        android:text="@string/m_t_chi_ti_t_s_n_ph_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:id="@+id/textviewmotaCTSP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </ScrollView>

  </LinearLayout>

  </LinearLayout>