<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.GioHang"
    android:weightSum="10">
    <androidx.appcompat.widget.Toolbar
        android:background="#4F79E4"
        app:title="Giỏ Hàng"
        android:id="@+id/toolbargiohang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">
            <TextView
                android:layout_gravity="center"
                android:id="@+id/textviewthongbao"
                android:textSize="30sp"
                android:text="@string/gi_h_ng_c_a_b_n_ang_tr_ng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ListView
                android:id="@+id/listviewgiohang"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            tools:ignore="UselessParent">
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:textColor="#f20"
                    android:textSize="25sp"
                    android:text="@string/t_ng_ti_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="right|center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:ignore="RtlHardcoded">
                <TextView
                    android:id="@+id/textviewtongtien"
                    android:textColor="#f20"
                    android:textSize="25sp"
                    android:text="@string/gi_tr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:textSize="20sp"
        android:text="@string/thanh_to_n_gi_h_ng"
        android:id="@+id/buttonthanhtoan"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <Button
        android:textSize="20sp"
        android:text="@string/ti_p_t_c_mua_h_ng"
        android:id="@+id/buttontieptucmuahang"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</LinearLayout>