<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bglogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DangKyActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbardangky"
        android:background="#3300FF"
        app:titleTextColor="#ffffff"
        app:title="Đăng Ký"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/boder"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="10dp"
            android:src="@drawable/loginavatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="30sp"
            android:text="@string/ng_ky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/edittexttk"
                android:inputType="text"
                android:hint="@string/nh_p_t_n_t_i_kho_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/edittextmk1"
                android:inputType="textPassword"
                android:hint="@string/nh_p_m_t_kh_u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="5dp"
                android:id="@+id/edittextmk2"
                android:inputType="textPassword"
                android:hint="@string/nh_p_l_i_m_t_kh_u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginEnd="70dp"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttonDk"
                android:text="@string/ng_k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttonbackhome"
                android:text="@string/tr_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>