<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bglogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DangxuatActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarlogout"
        android:background="#3300FF"
        app:titleTextColor="#ffffff"
        app:title="Đăng Xuất"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/boder"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="10dp"
            android:src="@drawable/loginavatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="30sp"
            android:text="@string/ng_nh_ptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="#f20"
            android:text="@string/b_n_c_ch_c_l_m_nh_s_ng_xu_t_ch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginEnd="70dp"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttonlogout"
                android:text="@string/ng_xu_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttonhome"
                android:text="@string/tr_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>