<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/lienhebg"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LienHeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarlienhe"
        android:background="#0000FF"
        app:titleTextColor="#ffffff"
        app:title="Liên Hệ"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/boder"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="30sp"
            android:text="@string/th_ng_tin_li_n_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:inputType="text"
                android:hint="@string/h_v_t_n_mai_anh_h_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:inputType="text"
                android:hint="@string/email_mahoa_19it1_vku_udn_vn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:inputType="phone"
                android:hint="@string/i_n_tho_i_0706097692"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</LinearLayout>